tests/compiler_errors/fn_tests/generic_fn_invalid_call.tlp
with T
fn foo T -> T do end

1 foo drop